fix: Adds optional support for receiving entrypoints as input into analyzes