@@ -10,6 +10,7 @@ import soot.Unit;
 
 import java.io.File;
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * An analysis wrapper around the Sparse value
@@ -20,15 +21,23 @@ public abstract class SVFAAnalysis extends JSVFA {
     private String cp;
 
     private AbstractMergeConflictDefinition definition;
+    private List<String> entrypoints;
 
     /**
      * SVFAAnalysis constructor
-     * @param classPath a classpath to the software under analysis
+     *
+     * @param classPath  a classpath to the software under analysis
      * @param definition a definition with the sources and sinks unities
      */
     public SVFAAnalysis(String classPath, AbstractMergeConflictDefinition definition) {
         this.cp = classPath;
         this.definition = definition;
+    }
+
+    public SVFAAnalysis(String classPath, AbstractMergeConflictDefinition definition, List<String> entrypoints) {
+        this.cp = classPath;
+        this.definition = definition;
+        this.entrypoints = entrypoints;
     }
 
     @Override
@@ -67,19 +76,30 @@ public abstract class SVFAAnalysis extends JSVFA {
     public final scala.collection.immutable.List<SootMethod> getEntryPoints() {
         definition.loadSourceStatements();
         definition.loadSinkStatements();
-        return JavaConverters.asScalaBuffer(
-            new ArrayList<>(
-                definition.getEntryMethods()
-            )        
-        ).toList();
+
+        List<Statement> allStatements = new ArrayList<>();
+        allStatements.addAll(getSourceStatements());
+        allStatements.addAll(getSinkStatements());
+
+        if (entrypoints == null || entrypoints.isEmpty()) {
+            return JavaConverters.asScalaBuffer(getSourceStatements()
+                    .stream()
+                    .map(Statement::getSootMethod)
+                    .collect(Collectors.toList())).toList();
+        } else {
+            return JavaConverters.asScalaBuffer(
+                    new ArrayList<>(definition.configureEntryPoints(entrypoints, allStatements))
+            ).toList();
+        }
+
     }
+
 
     @Override
     public final NodeType analyze(Unit unit) {
-        if(isSource(unit)) {
+        if (isSource(unit)) {
             return SourceNode.instance();
-        }
-        else if(isSink(unit)) {
+        } else if (isSink(unit)) {
             return SinkNode.instance();
         }
         return SimpleNode.instance();
